# get-me-hired-workflow

./: .gitignore  CONTRIBUTING.md  README.md  TODO.md  config.py  keyword_filter.py  main.py  parsed_resume.txt  prompts.py  pyproject.toml  requirements.txt  source_resume.tex
.github/workflows/: ai-job-assistant.yml
models/: gemini_output_models.py
modules/: data_fetcher.py  email_module.py  gemini_client.py  nlp_processor.py  profile_builder.py  resume_generator.py  scraper.py  tracker.py
